<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LE</string>
    <string name="action_settings">Settings</string>
    <string name="action_copy">copy</string>
    <string name="action_cut">cut</string>
    <string name="action_delete">delete</string>
    <string name="action_zip">zip</string>
    <string name="action_unzip">unzip</string>
    <string name="action_favor">favor</string>
    <string name="action_rename">rename</string>
    <string name="action_property">property</string>
    <string name="action_search">search</string>
    <string name="action_new">add</string>
    <string name="action_viewmode">viewmode</string>
    <string name="action_toggle_hidden">Toggle Hidden</string>
    <string name="action_refresh">Refresh</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="back">返回</string>
    <string name="category_all">All</string>
    <string name="category_apk">APKs</string>
    <string name="category_document">Docs</string>
    <string name="category_favorite">Favorites</string>
    <string name="category_music">Music</string>
    <string name="category_other">Misc</string>
    <string name="category_picture">Pics</string>
    <string name="category_theme">Themes</string>
    <string name="category_video">Videos</string>
    <string name="category_zip">Zips</string>
    <!-- Grid_Left -->
    <string name="filename">FileName</string>
    <string name="filetype">FileType</string>
    <string name="filepath">FilePath</string>
    <string name="filevolume">FileVolume</string>
    <string name="fileinvolving">Involving</string>
    <string name="modifiedTime">CreateTime</string>
    <string name="title_activity_picker">FilePicker</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_image_browse">ImageBrowseActivity</string>
    <string name="title_activity_audio">AudioActivity</string>

</resources>