<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/file_copy"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_copy"/>
    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/file_cut"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_cut"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/file_delete"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/action_delete"/>
    <item
        android:id="@+id/action_rename"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/action_rename"/>
    <item
        android:id="@+id/action_zip"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:title="@string/action_zip"/>
    <item
        android:id="@+id/action_unzip"
        android:orderInCategory="6"
        android:showAsAction="ifRoom"
        android:title="@string/action_unzip"/>
    <item
        android:id="@+id/action_favor"
        android:orderInCategory="7"
        android:showAsAction="ifRoom"
        android:title="@string/action_favor"/>
    <item
        android:id="@+id/action_property"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_property"/>

</menu>